@@ -1,5 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.2
+  *) [TS-996] HTTPHdr::m_host goes stale if HdrHeap::evacuate_from_str_heaps
+   is called. Author: B. Wyatt.
+
   *) [TS-1041] Populate sockaddr length. Author: James Peach.
 
   *) [TS-1081] Eliminate an additional copy of the pristine URL string.
